syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.listener.waves";
option java_outer_classname = "WavesListenerProto";

package wavesListener;

// The common service definition.
service Listener {
  // Sends a greeting
  rpc AddTask (AddTaskRequest) returns (AddTaskResponse) {}
  rpc RemoveTask (RemoveTaskRequest) returns (Empty) {}
}

// The request message containing the user's name.
message AddTaskRequest {
    string address = 1;
    string callbackType = 2;
    string callbackUrl = 3;
    string taskType = 4;
}

message AddTaskResponse {
    string taskId = 1;
}

message RemoveTaskRequest {
    string taskId = 1;
}

message Empty {}